--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-altair
-cloudpickle
-joblib
-numpy
-openai
+streamlit
 pandas
 plotly
-streamlit
-streamlit_extras
-browser
+sqlite3
+openai
+python-dotenv
+altair
+st-aggrid
+numpy
+joblib
+cloudpickle
+streamlit-extras
+json
+tempfile
+csv
